@@ -24,22 +24,6 @@
 		HIGHLIGHT_DIGITS="TRUE"
 		DIGIT_RE="(0x[[:xdigit:]]+[lL]?|[[:digit:]]+(e[[:digit:]]*)?[lLdDfF]?)">
 
-		<!-- PHP code, copied from php.xml by Chris Petersen -->
-		<SPAN TYPE="MARKUP" DELEGATE="php::PHP">
-			<BEGIN>&lt;?php</BEGIN>
-			<END>?&gt;</END>
-		</SPAN>
-
-		<SPAN TYPE="MARKUP" DELEGATE="php::PHP">
-			<BEGIN>&lt;?</BEGIN>
-			<END>?&gt;</END>
-		</SPAN>
-
-		<SPAN TYPE="MARKUP" DELEGATE="php::PHP">
-			<BEGIN>&lt;%=</BEGIN>
-			<END>%&gt;</END>
-		</SPAN>
-
 		<!-- The rest of the javascript info -->
 
 		<SPAN TYPE="COMMENT1">
